package entity;

public class Entity {
    public int worldX, worldY;
    String name;
    int id = 0;
    int Xpos;
    int Ypos;
    int movementspeed;

}
