@startuml

class Main{
public static void main(String[] args)
}

class GamePanel{
- int FPS
- int windowLength
- int windowHeight
+ createWindow()
+ run()
+ update()
+ draw()
}

class KeyHandler{
+ boolean UP
+ boolean DOWN
+ boolean LEFT
+ boolean RIGHT
+ boolean Interact
+ void KeyPressed()
+ void KeyReleased()
}




class Tile extends Entity{
+ BufferedImage image
- boolean collision

}

class Entity{
- String name
- int id
- int XPos
- int YPos
- int movementSpeed
}

class GUI{
- String previousMessage
+ void displayMessage()
+ void previousMessage()
+ void nextMessage()
+ void messageDivider()
+ String getMessage(Entity E, String event)
}

class TileManager{
- String locationName
- int LocationWidth
- int LocationHeight
+ void update()
+ void draw()
+ void collision()
+ void drawLocation()
+ void getLocation()
}

class Player extends Entity {
+ void idleState()
+ void update()
+ void draw()
}

class NPC extends Entity{
+ boolean hasMainEvent
+ boolean hasSideEvent
+ String NpcMessage
+ void update()
+ void draw()
+ void interact()
+ void unlockMainEvent()
+ void unlockSideEvent()
}

class MainEvent {
- {static} int eventNumber
+ int getEventNumber()
+ void setEventNumber()
}

class SideEvent{
- boolean unlocked
- int sideEventNumber
}

class SoundSystem{
+ void playTrack(String fileName)
+ void musicBreak(String fileName)
}

class FileIO{
+ void loadSprite()
+ void loadFile()
}


Main -- GamePanel

GamePanel -- KeyHandler

SoundSystem ..> FileIO

TileManager ..> GamePanel
TileManager -- MainEvent
Tile -- TileManager

Player ..> KeyHandler
Player ..> GamePanel

MainEvent -- NPC
SideEvent -- NPC

GUI -- GamePanel
GUI -- MainEvent
GUI -- SideEvent





@enduml